(2)  Corrected intensity normalization error in 7T data. 
(3)  Removed old average T1 IXI image in VBM main directory. 
     A new average T1 can be found in the "template_1.50mm" directory. 
------------------------------------------------------------------------
r613 | dahnke | 2014-09-24 18:21:36

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_stat_marks.m

(1)  Corrected QA execution error. 


------------------------------------------------------------------------
r614 | dahnke | 2014-09-25 01:09:08

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_tst_pre.m

(1)  Corrected error in LAS class correction that cause problems with the WMHC.
------------------------------------------------------------------------
r615 | dahnke | 2014-09-25 13:51:10

M       CHANGES.txt
M       Makefile.vbm
M       cg_vbm_write.m
M       compile.m
M       tbx_cfg_vbm.m
M       vbm12.man
M       vbm_io_cmd.m
M       vbm_surf_createCS.m

(1) Corrected output of processing time in cg_vbm_write.m and 
    vbm_surf_createCS.m.
(2) Some minor modication to GUI-text.
(3) Modified compile tool.
(4) Handling of exlusively saving jacobian was not correct.


------------------------------------------------------------------------
r616 | gaser | 2014-09-29 11:20:33

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man
M       vbm_surf_createCS.m

(1) Again corrected output of processing time in cg_vbm_write.m and 
    vbm_surf_createCS.m.
(2) ornlm_str was missing if only SANLM filter was used in cg_vbm_write.m.

------------------------------------------------------------------------
r617 | gaser | 2014-09-29 14:10:48

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man

(1) Again corrected output of processing time in cg_vbm_write.m and 
    vbm_surf_createCS.m.
(2) ornlm_str was missing if only SANLM filter was used in cg_vbm_write.m.

------------------------------------------------------------------------
r618 | gaser | 2014-09-29 15:05:51