@@ -5346,3 +5346,12 @@ M       vbm12.man
 
 ------------------------------------------------------------------------
 r618 | gaser | 2014-09-29 15:05:51
+
+M       CHANGES.txt
+M       cg_vbm_write.m
+M       vbm12.man
+
+Added denoising of initial spm segmentation using spm_mrf.
+
+------------------------------------------------------------------------
+r619 | gaser | 2014-09-29 17:13:44
